# value-analysis

./: .gitignore  README.md  pyproject.toml
data/: report.00700.HK.csv  report.01024.HK.csv  report.03690.HK.csv  report.09618.HK.csv  report.09999.HK.csv  report.AAPL.O.csv  report.MSFT.O.csv  report.NVDA.O.csv  report.PDD.O.csv
valuation/: valuation.ipynb  valuation_old.ipynb
value_analysis/: common.py  crawler.ipynb  crawler.py  valuation.ipynb  valuation.py
